# ETL_End_To_End

./: .env  .gitignore  README.md  app.py  duckdb  pipeline_00.py  pipeline_00_POO.py  pyproject.toml  requirements.txt
