[project]
name = "etl-end-to-end"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Barros",email = "juliobarro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown (>=5.2.0,<6.0.0)",
    "duckdb (>=1.2.1,<2.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
